<resources>
    <string name="app_name">눈 떠!</string>
    <string name="kakao_app_key">11db5cdde596e50ac23ebf26b9c10e27</string>

    <string name="ok_string">확인</string>
    <string name="cancel_string">취소</string>
    <string name="complete_string">완료</string>
    <string name="disable_alarm">알람 끄기</string>
    <string name="remove_alarm">알람 삭제</string>
    <string name="manage_user_info">회원 정보</string>

    <string name="time_am">오전</string>
    <string name="time_pm">오후</string>

    <string-array name="day_names_korean">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <!-- 로딩 화면 -->
    <string name="loading_text_first">잠시만 기다려주세요</string>
    <string name="loading_text_second">곧 눈떠를 사용할 수 있어요!</string>

    <!-- 온보딩 화면 -->
    <string name="first_onboarding_title">무조건 가야 한다!</string>
    <string name="first_onboarding_subtitle">목표 장소에 도착 해야만 꺼지는 알람!</string>
    <string name="second_onboarding_title">목표 장소, 목표 시간을</string>
    <string name="second_onboarding_subtitle">설정하고</string>
    <string name="third_onboarding_title">목표 장소에 시간 안에 도착하지 못하면</string>
    <string name="third_onboarding_subtitle">꺼지지 않는 알람이!</string>
    <string name="fourth_onboarding_title">눈떠와 함께</string>
    <string name="fourth_onboarding_subtitle">당신의 목표를 이뤄보세요!</string>

    <!-- MainActivity - 상단 접고 펼치는 UI -->
    <string name="home_alarm_caution_start">알람 유의사항</string>
    <string name="home_alarm_caution_end">을 반드시 숙지하세요!</string>
    <string name="home_arrived_certification">도착 인증</string>
    <string name="home_arrived_certification_content">도착인증은 알람시간 1시간 전부터 가능해요</string>
    <string name="home_turn_off_alarm">알람 끄기</string>
    <string name="home_turn_off_alarm_content">인증하지 않고 알람끄기는 알람별 2회까지 가능해요</string>
    <string name="home_update_alarm">알람 수정</string>
    <string name="home_update_alarm_content">알람 당일은 시간과 장소 수정이 불가능해요</string>
    <string name="home_remove_alarm">알람 삭제</string>
    <string name="home_remove_alarm_content_first">알람 삭제는 주 2회 가능해요</string>
    <string name="home_remove_alarm_content_second">알람 삭제는 알람 설정 시간의 24시간 전까지 가능해요</string>
    <string name="home_empty_alarm">아직 알람이 없어요</string>

    <!-- 알람삭제 바텀 시트 -->
    <string name="remove_alarm_title">알람삭제</string>
    <string name="remove_alarm_sub_title">삭제 이유를 선택해 주세요</string>
    <string name="remove_alarm_reason_1">실수로 설정했어요</string>
    <string name="remove_alarm_reason_2">예외적인 일이 생겼어요 (급한 외출, 병원 방문 등)</string>
    <string name="remove_alarm_reason_3">그냥... 너무 피곤해서요</string>
    <string name="remove_alarm_reason_4">몸이 안 좋아서 오늘은 쉬고 싶어요</string>
    <string name="remove_alarm_reason_5">일정이 변경되었어요</string>

    <!-- 알람 끄기 경고 팝업 -->
    <string name="disable_popup_title">경고</string>
    <string name="disable_popup_content">알림 끄기는 3회만 가능하니\n신중하게 선택하세요!</string>
    <string name="disable_alarm_remain_count">이번 주 알람 비활성화 남은 횟수</string>
    <string name="cannot_disable_alarm">이제 알람을 끌 수 없어요.\n지정한 장소로 이동해 알람 끄기를 도전하세요.</string>

    <!-- 로그아웃 팝업 -->
    <string name="logout_popup_title">로그아웃</string>
    <string name="logout_popup_content">정말 로그아웃하시겠어요?</string>

    <!-- 회원탈퇴 팝업 -->
    <string name="withdrawal_popup_content">정말 탈퇴 하시겠어요?</string>
    <string name="withdrawal_popup_sub_content">탈퇴 시 기록을 되돌릴 수 없어요</string>
    <string name="withdrawal_popup_ok_button">탈퇴하기</string>

    <!-- 알람 설정 화면 -->
    <string name="create_alarm_header">알람 설정</string>
    <string name="create_alarm">저장하기</string>
    <string name="alarm_sound">알람 소리</string>
    <string name="is_repeatable">반복 여부</string>
    <string name="alarm_time">알람 시간</string>
    <string name="alarm_purpose">알람 목적</string>
    <string name="alarm_purpose_hint">눈 떠!</string>
    <string name="find_in_map">지도에서 찾기</string>
    <string name="arrive_target_place_hint">도착 목표 장소는?</string>
    <string name="select_place">장소 선택</string>
    <string name="alarm_created">알람이 추가되었어요</string>

    <string name="not_sound">소리없음</string>
    <string name="sound_1">카리나의 쓴소리</string>
    <string name="sound_2">일어나 움직여</string>
    <string name="sound_3">경고! 내 인생!</string>
    <string name="sound_4">나는 조선의 자존심</string>
    <string name="sound_pre_listening">미리듣기</string>

    <!-- 알람 설정 화면 하단 경고 UI -->
    <string name="create_alarm_caution_start">알람 설정 유의사항</string>
    <string name="create_alarm_caution_end">을 반드시 숙지하세요!</string>
    <string name="create_alarm_alert_first">소리가 매우 자극적일 수 있어요!</string>
    <string name="create_alarm_alert_second">소리 선택을 하지 않으면 진동모드로 제공돼요</string>

    <!-- 장소 선택 화면(지도에서 찾기 클릭 시 이동) -->
    <string name="select_place_header">장소 선택</string>
    <string name="disable_alarm_here">여기서 알람 끄기!</string>
    <string name="register_target_address">목표 장소 등록하기</string>
    <string name="search_result">검색 결과</string>

    <!-- 회원 정보 화면 -->
    <string name="current_version">현재 버전</string>
    <string name="terms_policy">이용 약관</string>
    <string name="personal_info_policy">개인정보처리방침</string>
    <string name="setting_agreements">동의여부 설정</string>
    <string name="inquiry_string">문의하기</string>
    <string name="logout_string">로그아웃하기</string>
    <string name="withdrawal_string">회원탈퇴</string>
    <string name="withdrawal_success_message">회원 탈퇴가 완료되었습니다</string>

    <!-- 회원 정보 화면 > XML -->
    <string name="version_info_title">버전 정보</string>
    <string name="policy_title">약관 및 정책</string>
    <string name="service_setting_title">서비스 설정</string>
    <string name="logout_withdrawal_title">로그인 / 탈퇴</string>

    <!-- 로컬 알람 울릴 때 표시되는 알람 -->
    <string name="alarm_title">알람이 울리고 있어요!</string>
    <string name="alarm_sub_title">앱으로 접속해서 알람을 꺼주세요!</string>
    <string name="local_alarm_left_button">봐주세요🥹</string>
    <string name="local_alarm_right_button">장소 인증하기</string>
    <string name="check_in_bottom_sheet_title">위치 확인중이에요</string>
    <string name="check_in_bottom_sheet_sub_title">잠시만 기다려 주세요</string>
    
    <!-- 도착 인증 성공 화면 -->
    <string name="success_check_in_header">도착 인증</string>
    <string name="success_check_in_title">도착 인증에 성공했어요!</string>

    <!-- 도착 인증 성공 화면 > 봐주세요 클릭 시 표시되는 비활성화 관련 내용 -->
    <string name="check_in_alarm_disable_title">알람 비활성화는 주 2회만 가능해요!</string>
    <string name="check_in_alarm_disable_sub_title">이번 주 알람 비활성화 남은 횟수 </string>
    <string name="use_one_disable_change">1회 사용하기</string>
    <string name="check_in_alarm_not_disable_title">알람 비활성화 횟수를 모두 사용했어요!</string>
    <string name="check_in_alarm_not_disable_sub_title">지정한 장소로 이동해 인증해 보세요!</string>
</resources>