<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_popup_border_16_radius"
        android:paddingHorizontal="12dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWithdrawalPopupTitle"
            style="@style/subtitle6_b_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="22dp"
            android:text="@string/withdrawal_string"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivWithdrawalPopupDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dismiss_black_22"
            app:layout_constraintBottom_toBottomOf="@+id/tvWithdrawalPopupTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvWithdrawalPopupTitle" />

        <TextView
            android:id="@+id/tvWithdrawalPopupContent"
            style="@style/subtitle5_b_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/withdrawal_popup_content"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWithdrawalPopupTitle" />

        <TextView
            android:id="@+id/tvWithdrawalPopupSubContent"
            style="@style/body2_m_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/withdrawal_popup_sub_content"
            android:textColor="@color/grey_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWithdrawalPopupContent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWithdrawalPopupSubContent">

            <com.whiplash.presentation.component.button.WhiplashCommonButton
                android:id="@+id/btnCancelWithdrawal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                app:borderColor="@color/grey_700"
                app:borderWidth="@dimen/dp_1"
                app:buttonBackgroundColor="@color/grey_800"
                app:buttonText="@string/cancel_string"
                app:buttonTextColor="@color/white" />

            <com.whiplash.presentation.component.button.WhiplashCommonButton
                android:id="@+id/btnWithdrawal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:buttonBackgroundColor="@color/white"
                app:buttonText="@string/withdrawal_popup_ok_button"
                app:buttonTextColor="@color/grey_900" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>