<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_popup_border_16_radius"
        android:paddingHorizontal="12dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDisableAlarmTitle"
            style="@style/subtitle6_b_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="22dp"
            android:text="@string/disable_popup_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDisableAlarmDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dismiss_black_22"
            app:layout_constraintBottom_toBottomOf="@+id/tvDisableAlarmTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDisableAlarmTitle" />

        <TextView
            android:id="@+id/tvDisableAlarmContent"
            style="@style/subtitle5_b_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/check_in_alarm_disable_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDisableAlarmTitle" />

        <!-- 알람 끄기 횟수를 모두 쓴 경우에만 표시 -->
        <TextView
            android:id="@+id/tvDisableAlarmSubContent"
            style="@style/body2_m_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/check_in_alarm_not_disable_sub_title"
            android:textColor="@color/grey_300"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDisableAlarmContent"
            tools:visibility="visible" />
        <!-- 알람 끄기 횟수를 모두 쓴 경우에만 표시 -->

        <LinearLayout
            android:id="@+id/llRemainDisableAlarmCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_bordered_container_4_radius"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDisableAlarmSubContent">

            <TextView
                style="@style/body2_m_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_alarm_remain_count"
                android:textColor="@color/grey_300" />

            <TextView
                android:id="@+id/tvRemainDisableAlarmCount"
                style="@style/body2_m_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/lemon_400"
                tools:text="2회" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llRemainDisableAlarmCount">

            <com.whiplash.presentation.component.button.WhiplashCommonButton
                android:id="@+id/btnCancelDisable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                app:buttonBackgroundColor="@color/grey_800"
                app:buttonText="@string/cancel_string"
                app:buttonTextColor="@color/white" />

            <com.whiplash.presentation.component.button.WhiplashCommonButton
                android:id="@+id/btnAlarmDisable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                app:buttonBackgroundColor="@color/white"
                app:buttonText="@string/use_one_disable_change"
                app:buttonTextColor="@color/grey_900" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>