<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_place_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_900"
    tools:context=".search_place.SearchPlaceActivity">

    <com.whiplash.presentation.component.header.WhiplashHeader
        android:id="@+id/whSearchPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showLeftIcon="true" />

    <com.whiplash.presentation.component.edittext.WhiplashSearchBar
        android:id="@+id/wsbPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="32dp"
        android:hint="@string/arrive_target_place_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whSearchPlace" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchInMapContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/wsbPlace"
        app:layout_constraintTop_toBottomOf="@+id/wsbPlace">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_map_black_22"
            app:layout_constraintBottom_toBottomOf="@+id/tvSearchInMap"
            app:layout_constraintEnd_toStartOf="@+id/tvSearchInMap"
            app:layout_constraintTop_toTopOf="@+id/tvSearchInMap" />

        <TextView
            android:id="@+id/tvSearchInMap"
            style="@style/body2_m_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_in_map"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvSearchResult"
        style="@style/body5_m_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/search_result"
        android:textColor="@color/grey_500"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clSearchInMapContainer"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchPlace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchResult" />

</androidx.constraintlayout.widget.ConstraintLayout>